--- a/Quotes.html
+++ b/Quotes.html
@@ -6,13 +6,13 @@
     <meta name="developer/author" content="Alison Concordia">
     <meta name="description" content="Inspirational quotes page...">
     <title>Quotes</title>
-    <link rel="stylesheet" href="C:\Users\Conco\Documents\Docs\C\Master02\Styles\FA\css\all.min.css">
-    <link rel="stylesheet" href="C:\Users\Conco\Documents\Docs\C\Master02\Styles\Bv5\css\bootstrap.min.css">
-    <link rel="stylesheet" href="C:\Users\Conco\Documents\Docs\C\Master02\Styles\Bv5\css\bootstrap-grid.min.css.map">
+    <link rel="stylesheet" href="/Master02/Styles/FA/css/all.min.css">
+    <link rel="stylesheet" href="/Master02/Styles/Bv5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Master02/Styles/Bv5/css/bootstrap-grid.min.css.map">
   </head>
   <body>
     <!-- Navigation Here -->
-      <nav class="navbar navbar-expand-lg text-align-center align-items-center justify-content-evenly navbar-dark bg-danger">
+      <nav id="Top" class="navbar navbar-expand-lg text-align-center align-items-center justify-content-evenly navbar-dark bg-danger">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Site Navigation</a>
           <button class="btn btn-lg btn-outline-dark navbar-toggler" type="button" name="navButton" data-bs-toggle="collapse" data-bs-target="#navBar" aria-controls="navBar" aria-expanded="false" aria-label="Toggle Navigation">
@@ -46,9 +46,9 @@
                 </ul>
               </li>
               <li class="nav-item dropend">
-                <a id="missionDrop" class="nav-link dropdown-toggle" role="button" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+                <a id="missionDrop" class="nav-link dropdown-toggle" role="button" href="#" data-bs-toggle="dropdown" aria-expanded="false">Mission</a>
                 <ul class="dropdown-menu text-center mx-auto" aria-labelledby="missionDrop">
-                  <li><a class="dropdown-item" href="/missionStart.html">Mission</a></li>
+                  <li><a class="dropdown-item" href="/missionStart.html">Vision</a></li>
                   <li><a class="dropdown-item" href="/aboutMe.html">About</a></li>
                   <li class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/Templates.html">Templates</a></li>
@@ -56,7 +56,7 @@
               </li>
             </ul>
           </div>
-          <button class="btn btn-outline-light" type="button" name="button" aria-controls="Bottom" aria-label="Bottom"><i class="fas fa-angle-double-down"></i></button>
+          <button class="btn btn-outline-light" type="button" name="button" aria-controls="#Bottom" aria-label="Bottom"><i class="fas fa-angle-double-down"></i></button>
         </div>
       </nav>
     <!-- Header Here -->
@@ -68,23 +68,26 @@
 
 
 <div class="container-fluid align-items-center justify-content-around">
-  <div class="row justify-content">
+  <div id="Recent" class="row justify-content">
     <div class="col-4">
       <h2>Recent Quotes</h2>
       <ul>
         <li>Albert Einstein</li>
         <li>Og Mandino</li>
         <li>Buddha</li>
+        <li>Napoleon Hill</li>
       </ul>
       <button class="btn btn-success" type="button" name="SeePg02" data-bs-togglel="button" data-bs-target="Page02"><i class="fas fa-archive"> </i> View </button>
     </div>
     <div class="col-8 text-center">
       <h2>More quotes to come...</h2>
       <h3>Future poets:</h3>
-      <li>Amelia Earheart</li>
-      <li>Franklin Roosevelt</li>
-      <li>Eleanor Roosevelt</li>
-      <li>Earl Nightingale</li>
+        <ul>
+          <li>Amelia Earheart</li>
+          <li>Franklin Roosevelt</li>
+          <li>Eleanor Roosevelt</li>
+          <li>Earl Nightingale</li>
+        </ul>
     </div>
   </div>
 
@@ -93,91 +96,110 @@
       <thead class="table-light">
         <th></th>
       </thead>
+      <tbody>
+
+      </tbody>
     </table>
 
   </div>
 </div>
 
 
-<div class="accordion" id="Quotes">
+<div id="Quotes" class="accordion">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="heading01">
-      <button class="accordion-button text-info bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#quotesOne" name="button1" aria-expanded="true" aria-controls="quotesOne">
+    <h2 id="heading01" class="accordion-header">
+      <button class="accordion-button text-info bg-dark" type="button" name="button1" data-bs-toggle="collapse" data-bs-target="#quotesOne" aria-controls="quotesOne" aria-expanded="true">
         Albert Einstein
       </button>
     </h2>
-<div class="accordion-collapse collapse show" id="quotesOne" aria-labelledby="heading01" data-bs-parent="#Quotes">
+<div id="quotesOne" class="accordion-collapse collapse show"  aria-labelledby="heading01" data-bs-parent="#Quotes">
   <div id="AlbertEinstein" class="accordion-body">
     <h3 class="text-center border border-info rounded-pill"> {03-14-1879 ~ 04-18-1955}  <i class="fas fa-chalkboard-teacher"> </i>  Theoretical Physicist</h3>
-    <p><q cite="Albert Einstein" class="blockquote-sm"><strong>If you can't explain it simply, you don't understand it well enough.</strong></q></p>
+    <p><q cite="Albert-Einstein" class="blockquote-sm"><strong>If you can't explain it simply, you don't understand it well enough.</strong></q></p>
     <hr>
-    <p><q cite="Albert Einstein" class="blockquote"><strong>No problem can be solved from the same level of consciousness that created it.</strong></q></p>
-  <button class="btn btn-info btn-outline-danger" type="button" name="moreAE" data-bs-toggle="collapse" data-bs-target="#Q01Collapse" data-bs-parent="#AlbertEinstein" aria-controls="Q01Collapse" aria-expanded="false">See more..</button>
+    <p><q cite="Albert-Einstein" class="blockquote"><strong>No problem can be solved from the same level of consciousness that created it.</strong></q></p>
+  <button class="btn btn-info btn-outline-danger" type="button" name="moreAE" data-bs-toggle="collapse" data-bs-target="#Q01Collapse" data-bs-parent="#quotesOne" aria-controls="Q01Collapse" aria-expanded="false">See more..</button>
     <div id="Q01Collapse" class="collapse">
-      <p><q cite="Albert Einstein" class="blockquote-sm"><strong>Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.</strong></q></p>
-      <p><q cite="Albert Einstein" class="blockquote"><strong>Logic will get you from A to B. Imagination will take you everywhere.</strong></q></p>
+      <p><q cite="Albert-Einstein" class="blockquote-sm"><strong>Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.</strong></q></p>
+      <p><q cite="Albert-Einstein" class="blockquote"><strong>Logic will get you from A to B. Imagination will take you everywhere.</strong></q></p>
     </div>
   </div>
   </div>
  </div>
  <div class="accordion-item">
-   <h2 class="accordion-header" id="heading02">
-     <button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#quotesTwo" name="button2" aria-controls="quotesTwo" aria-expanded="false">
+   <h2 id="heading02" class="accordion-header">
+     <button class="accordion-button collapsed bg-success" type="button" name="button2"  data-bs-toggle="collapse" data-bs-target="#quotesTwo" data-bs-target="#Quotes" aria-controls="#quotesTwo" aria-expanded="false">
        Og Mandino
      </button>
    </h2>
- <div class="accordion-collapse collapse" id="quotesTwo" aria-labelledby="heading02" data-bs-parent="#Quotes">
+ <div id="quotesTwo" class="accordion-collapse collapse" aria-labelledby="heading02" data-bs-parent="#Quotes">
    <div id="OgMandino" class="accordion-body">
      <h3 class="text-center border border-info rounded-pill"> {12-12-1923 ~ 09-03-1996}  <i class="fas fa-book"> </i>  American Author</h3>
-     <p><q cite="Og Mandino" class="blockquote"><strong>I will love the light for it shows me the way, yet I will endure the darkness because it shows me the stars.</strong></q></p>
-     <p><q cite="Og Mandino" class="blockquote-sm"><strong>Always do your best. What you plant now, you will harvest later.</strong></q></p>
-     <button class="btn btn-info btn-outline-danger" type="button" name="moreOM" data-bs-toggle="collapse" data-bs-target="#Q02Collapse" data-bs-parent="#OgMandino" aria-controls="Q02Collapse" aria-expanded="false">See more..</button>
+     <p><q cite="Og-Mandino" class="blockquote"><strong>I will love the light for it shows me the way, yet I will endure the darkness because it shows me the stars.</strong></q></p>
+     <p><q cite="Og-Mandino" class="blockquote-sm"><strong>Always do your best. What you plant now, you will harvest later.</strong></q></p>
+     <button class="btn btn-info btn-outline-danger" type="button" name="moreOM" data-bs-toggle="collapse" data-bs-target="#Q02Collapse" data-bs-parent="#quotesTwo" aria-controls="Q02Collapse" aria-expanded="false">See more..</button>
     <div id="Q02Collapse" class="collapse">
-     <p><q cite="Og Mandino" class="blockquote"><strong>Take the attitude of a student, never be too big to ask questions, never know too much to learn something new.</strong></q></p>
-     <p><q cite="Og Mandino" class="blockquote-sm"><strong>Tomorrow is only found on the calandar of fools.</strong></q></p>
-     <p><q cite="Og Mandino" class="blockquote"><strong>Do all things with love.</strong></q></p>
+     <p><q cite="Og-Mandino" class="blockquote"><strong>Take the attitude of a student, never be too big to ask questions, never know too much to learn something new.</strong></q></p>
+     <p><q cite="Og-Mandino" class="blockquote-sm"><strong>Tomorrow is only found on the calandar of fools.</strong></q></p>
+     <p><q cite="Og-Mandino" class="blockquote"><strong>Do all things with love.</strong></q></p>
    </div>
  </div>
 </div>
 </div>
  <div class="accordion-item">
-   <h2 class="accordion-header" id="heading03">
-     <button class="accordion-button collapsed bg-info" type="button" data-bs-toggle="collapse" data-bs-target="#quotesThree" data-bs-parent="#Quotes" name="button3" aria-expanded="false" aria-controls="quotesThree">
+   <h2 id="heading03" class="accordion-header">
+     <button class="accordion-button collapsed bg-info" type="button" name="button3"  data-bs-toggle="collapse" data-bs-target="#quotesThree" data-bs-parent="#Quotes" aria-controls="quotesThree" aria-expanded="false">
        Gautama Buddha
      </button>
    </h2>
-   <div class="accordion-collapse collapse" id="quotesThree" aria-labelledby="heading03" data-bs-parent="#Quotes">
+   <div id="quotesThree" class="accordion-collapse collapse" aria-labelledby="heading03" data-bs-parent="#Quotes">
      <div id="Buddha" class="accordion-body">
        <h3 class="text-center border border-info rounded-pill"> {563 BCE ~ 483 BCE}  <i class="fas fa-balance-scale"> </i>  Buddha</h3>
        <p><q cite="Buddha" class="blockquote"><strong>Three things cannot be long hidden: the sun, the moon, and the truth.</strong></q></p>
        <hr>
        <p><q cite="Buddha" class="blockquote-sm"><strong>The mind is everything. What you think you become.</strong></q></p>
        <p><q cite="Buddha" class="blockquote-sm"><strong>Do not dwell in the past, do not dream of the future, concentrate the mind on the present moment.</strong></q></p>
-       <button class="btn btn-info btn-outline-danger" type="button" name="moreOM" data-bs-toggle="collapse" data-bs-target="#Q02Collapse" data-bs-parent="#Buddha" aria-controls="Q02Collapse" aria-expanded="false">See more..</button>
-      <div id="Q02Collapse" class="collapse">
+       <button class="btn btn-info btn-outline-danger" type="button" name="moreOM" data-bs-toggle="collapse" data-bs-target="#Q03Collapse" data-bs-parent="#quotesThree" aria-controls="Q03Collapse" aria-expanded="false">See more..</button>
+      <div id="Q03Collapse" class="collapse">
        <p><q cite="Buddha" class="blockquote"><strong>It is a man's own mind, not his enemy or foe, that lures him to evil ways.</strong></q></p>
        <p><q cite="Buddha" class="blockquote-sm"><strong>You lose only what you cling to.</strong></q></p>
        <hr>
        <p><q cite="Buddha" class="blockquote"><strong>It is better to travel well than to arrive.</strong></q></p>
      </div>
-     </div>
    </div>
  </div>
 </div>
-    <!-- Footer Here -->
-
-    <!-- Pagination Here -->
-  <nav aria-label="Standard Footer page navigation">
-    <ul class="pagination">
+<div class="accordion-item">
+  <h2 id="heading04" class="accordion-header">
+    <button class="accordion-button collapsed bg-light" type="button" name="moreNH" data-bs-toggle="collapse" data-bs-target="#quotesFour" data-bs-parent="#Quotes" aria-controls="quotesFour" aria-expanded="false">
+      Napoleon Hill
+    </button>
+  </h2>
+    <div id="quotesFour" class="accordion-collapse collapse" aria-labelledby="heading04" data-bs-parent="#Quotes">
+      <div id="NapoleonHill" class="accordion-body">
+        <h3 class="text-center border border-info rounded-pill"> {10-26-1883 ~ 11-08-1970} <i class="fas fa-book"> </i> American Author</h3>
+        <p><q cite="Napoleon-Hill" class="blockquote"><strong>The starting point of all achievement is desire.</strong></q></p>
+        <p><q cite="Napoleon-Hill" class="blockquote-sm"><strong>A goal is a dream with a deadline.</strong></q></p>
+        <hr>
+        <p><q cite="Napoleon-Hill" class="blockquote"><strong>Every adversity, every failure, and every heartache, carries with it the Seed
+        of an equivalent or greater Benefit.</strong></q></p>
+      </div>
+    </div>
+</div>
+</div>
+    <!-- Section Pagination Here -->
+  <nav aria-label="Standard Section Pagination Here page navigation">
+    <ul id="#Bottom" class="pagination justify-content-end">
       <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span> Previous</a></li>
-      <li class="page-item active" aria-current="page"><a class="page-link" href="#">One <i class="fas fa-check-square"></i></a></li>
-      <li class="page-item"><a class="page-link" href="#">Two</a></li>
-      <li class="page-item"><a class="page-link" href="#">Three</a></li>
-      <li class="page-item"><a class="page-link" href="#">Four</a></li>
-      <li class="page-item"><a class="page-link" href="/Next" aria-label="Next">Next <span aria-hidden="true">&raquo;</span></a></li>
+      <li class="page-item active"><a class="page-link" href="#Top" aria-current="page">One <i class="fas fa-check-square"></i></a></li>
+      <li class="page-item"><a class="page-link" href="/quotesTwo.html">Two</a></li>
+      <li class="page-item"><a class="page-link" href="/quotesThree.html">Three</a></li>
+      <li class="page-item"><a class="page-link" href="/quotesFour.html">Four</a></li>
+      <li class="page-item"><a class="page-link" href="/quotesTwo.html" aria-label="Next">Next <span aria-hidden="true">&raquo;</span></a></li>
     </ul>
   </nav>
+    <!--  Footer  -->
     <!-- JS and Popper Scripts -->
-    <script src="C:\Users\Conco\Documents\Docs\C\Styles\Bootstrap\js\bootstrap.bundle.min.js" charset="utf-8"></script>
+    <script src="/Master02/Styles/Bv5/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
