--- a/Quotes.html
+++ b/Quotes.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,shrink-to-fit=no;">
-    <meta name="developer/author" content="Alison Concordia">
+    <meta name="developer/author" content="Alison_Concordia~{Andrea.Estrada}">
     <meta name="description" content="Inspirational quotes page...">
     <title>Quotes</title>
     <link rel="stylesheet" href="../Master02/Styles/FA/css/all.min.css">
