--- a/Footer{C}.html
+++ b/Footer{C}.html
@@ -30,7 +30,7 @@
   <hr>
 </div>
   <!-- Links Here -->
-<div class="container-fluid p-2 m-auto">
+<div class="container-fluid bg-danger p-2 m-auto">
   <div class="row text-light text-center align-items-center justify-content-evenly">
     <div class="col-sm">
       <ul class="list-group list-group-flush">
